Source/WebKit2/UIProcess/API/gtk/tests/TestInspectorServer.cpp
@@ -184,7 +184,7 @@ static void testInspectorServerPageList(InspectorServerTest* test, gconstpointer
     g_assert(javascriptResult);
     g_assert(!error.get());
     valueString.set(WebViewTest::javascriptResultToCString(javascriptResult));
-    String validInspectorURL = String("/webinspector/inspector.html?page=") + String::number(pageId);
+    String validInspectorURL = String("/inspector.html?page=") + String::number(pageId);
     ASSERT_CMP_CSTRING(valueString.get(), ==, validInspectorURL.utf8());
 }
 
